# Game-Engine-Project

./: CMakeLists.txt
include/: component_storage.hpp  entity.hpp  entity_manager.hpp  render-system.hpp  screen.hpp  types.hpp  window.hpp
src/: Engine.hpp  main.cpp  window.cpp
src/entity/: entity.hpp  ientity.hpp
src/entity/entities/: screen.hpp
src/managers/: component_storage.hpp  entity_manager.hpp
src/system/systems/: render_system.hpp
src/util/: types.hpp
src/window/: iwindow.hpp
src/window/impls/: glfw_window.cpp  glfw_window.hpp
